:sparkles: Add blog example
