# src/route/api.go
@@ -11,18 +11,25 @@ import (
 )
 
 func SetupRoute(a *fiber.App, h *handler.Handler) {
-	a.Get("/", func(ctx *fiber.Ctx) error {
+	a.Get("", func(ctx *fiber.Ctx) error {
 		return utils.ReturnSuccessResponse(ctx, fiber.StatusOK, fmt.Sprintf("%s API", viper.GetString(constants.APP_NAME)), nil)
 	})
 
-	route := a.Group("/api")
+	route := a.Group("api")
 
 	// V1 Route
 	v1Route(route, h)
 }
 
 func v1Route(route fiber.Router, h *handler.Handler) {
-	v1 := route.Group("/v1")
+	v1 := route.Group("v1")
 
-	v1.Get("/ping", h.Ping.Ping)
+	v1.Get("ping", h.Ping.Ping)
+
+	blog := v1.Group("blogs")
+	blog.Get("", h.Blog.Index)
+	blog.Get(":id", h.Blog.Show)
+	blog.Post("", h.Blog.Store)
+	blog.Put(":id", h.Blog.Update)
+	blog.Delete(":id", h.Blog.Destroy)
 }
